yelb-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yelb-ingress
  labels:
    app: yelb-ui
    tier: frontend
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: yelb.cpod-aviv8.az-wdc.cloud-garage.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: yelb-ui
            port:
              number: 80
